AnimatedTransformMask: Fix undo / redo operations when keys are added using inplace transform.

Keyframes weren't properly cleaned up after transform operations due to where and how we were
adding keyframes. We should now have proper undo / redo support for keyframes created with this
method. Additionally, pressing escape twice to exit / cancel inplace transform stroke will
now properly undo any keyframe additions or replacements that occured, reverting keyframe
data back to intended values.

BUG:438341