plugins/tools/tool_transform2/kis_modify_transform_mask_command.h
@@ -28,4 +28,9 @@ private:
     QWeakPointer<boost::none_t> m_updatesBlockerCookie;
 };
 
+class KRITATOOLTRANSFORM_EXPORT KisInitializeTransformMaskKeyframesCommand : public KUndo2Command {
+public:
+    KisInitializeTransformMaskKeyframesCommand(KisTransformMaskSP mask);
+};
+
 #endif
