plugins/tools/tool_transform2/strokes/inplace_transform_stroke_strategy.cpp
@@ -291,6 +291,14 @@ void InplaceTransformStrokeStrategy::initStrokeCallback()
     // When placing an external source image, we never work recursively on any layer masks
     m_d->processedNodes = KisTransformUtils::fetchNodesList(m_d->mode, m_d->rootNode, m_d->externalSource);
 
+    // When dealing with animated transform mask layers, create keyframe and save the command for undo.
+    Q_FOREACH (KisNodeSP node, m_d->processedNodes) {
+        if (KisTransformMask* transformMask = dynamic_cast<KisTransformMask*>(node.data())) {
+            QSharedPointer<KisInitializeTransformMaskKeyframesCommand> addKeyCommand(new KisInitializeTransformMaskKeyframesCommand(transformMask));
+            runAndSaveCommand( addKeyCommand, KisStrokeJobData::CONCURRENT, KisStrokeJobData::NORMAL);
+        }
+    }
+
     bool argsAreInitialized = false;
     QVector<KisStrokeJobData *> lastCommandUndoJobs;
 
@@ -446,7 +454,6 @@ void InplaceTransformStrokeStrategy::initStrokeCallback()
             addMutatedJobs(lodSyncJobs);
         }
     });
-
 
     addMutatedJobs(extraInitJobs);
 }
